Clean up DnsNameResolver